--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0d7c056951c5378746f2",
+    "/css/app.css": "/css/app.css?id=67f8b7cccf56bc79dcc1"
 }
